deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-challenge-deployment
  labels:
    app: kubernetes-challenge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-challenge
  template:
    metadata:
      labels:
        app: kubernetes-challenge
    spec:
      containers:
        - name: kubernetes-challenge
          image: kubernetes-challenge:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
